--- a/public/style.css
+++ b/public/style.css
@@ -1,6 +1,18 @@
 * {
     box-sizing: border-box;
   }
+  .container {
+    position: relative;
+    text-align: center;
+    color: white;
+  }
+
+  .bottom-left {
+    position: absolute;
+    bottom: 8px;
+    left: 16px;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif
+  }
   
   body {
     font-family: sans-serif;
