complete dealers_choice functionality and added styling

--- a/public/style.css
+++ b/public/style.css
@@ -21,6 +21,9 @@
   img {
     max-width: 100%;
     height: auto;
+    padding: 1px;
+    display: flex;
+    flex-wrap: wrap;
   }
   
   p {
@@ -37,10 +40,12 @@
   }
   
   header {
-    background-color: #6b32e1;
+    background-color: firebrick;
     color: #fff;
     padding: 3px;
-    height: 26px;
+    height: 35px;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    vertical-align: bottom;
   }
   
   header > img {
@@ -73,6 +78,20 @@
     border:solid 1px #aacfe4;
     width: 100%;
   }
-  
+
+  div.building-info {
+    display: flex;
+    flex-wrap: wrap;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    margin: 15px;
+
+    padding: 5px 5px 5px 5px;
+
+    max-width: 100%;
+
+  }
+
  
   
